# asp3_core

./: .clangd  .clinerules  .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DIVERGENCE_MAP.md  MANIFEST  README.md  UPSTREAM_PRISTINE.txt  UPSTREAM_VERSION  asp3_core.cmake  configure.py  configure.rb
.claude/skills/asp3-core-ops/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  container.yml  nightly.yml
arch/arm64_gcc/: MANIFEST
arch/arm64_gcc/common/: Makefile.core  arch.cmake  arm64.c  arm64.h  arm64_insn.h  arm64_tool.h  core_asm.inc  core_cfg1_out.h  core_check.py  core_check.trb  core_kernel.h  core_kernel.py  core_kernel.trb  core_kernel_impl.c  core_kernel_impl.h  core_offset.py  core_offset.trb  core_os_awareness.py  core_rename.def  core_rename.h  core_sil.h  core_support.S  core_sym.def  core_syssvc.h  core_test.h  core_timer.c  core_timer.cfg  core_timer.h  core_unrename.h  gic_kernel.py  gic_kernel.trb  gic_kernel_impl.c  gic_kernel_impl.h  gic_support.S  start.S
arch/arm64_gcc/docs/: entry-cache-normalization.md
arch/arm64_gcc/stm32mp2/: Makefile.chip  PORTING_ASP3_STM32MP2.md  chip.cmake  chip_kernel.h  chip_kernel.py  chip_kernel.trb  chip_kernel_impl.c  chip_kernel_impl.h  chip_os_awareness.py  chip_rename.h  chip_stddef.h  chip_timer.cfg  chip_timer.h  chip_unrename.h  stm32mp2.h  stm32usart.c  stm32usart.h  tUsart.c  tUsart.cdl
arch/arm64_gcc/zynqmp/: chip.cmake  chip_kernel.h  chip_kernel.py  chip_kernel_impl.c  chip_kernel_impl.h  chip_os_awareness.py  chip_rename.def  chip_serial.cfg  chip_serial.h  libc_stub.c  xuartps.c  xuartps.h
arch/arm_gcc/: MANIFEST
arch/arm_gcc/common/: Makefile.core  arch.cmake  core_check.py  core_check.trb  core_kernel.h  (+8 more)
arch/arm_m_gcc/: MANIFEST
arch/posix_gcc/: E_PACKAGE  MANIFEST  arch.cmake  interrupt_sim.c  interrupt_sim.h  posix.cdl  posix_aio.cdl  posix_check.py  posix_check.trb  posix_design.txt  posix_kernel.py  posix_kernel.trb  posix_kernel_impl.c  posix_kernel_impl.h  posix_rename.def  posix_rename.h  posix_timer.c  posix_timer.cfg  posix_timer.h  posix_timer_itimer.c  posix_unrename.h  posix_user.txt  tPutLogPosix.c  tPutLogPosix.cdl  tSIOPortPosix.cdl  tSIOPortPosixAIO.cdl  tSIOPortPosixAIOMain.c  tSIOPortPosixMain.c  tecs_aiocb.h  tecs_termios.h  thread_ctrl.c  thread_ctrl.h
arch/simtimer/: sim_timer.c  sim_timer.h  sim_timer_cntl.h  tSimTimerCntl.c  tSimTimerCntl.cdl  tSimTimerCntlAdapter.c
arch/tracelog/: trace_dump.c  trace_fncode.h  trace_log.c  trace_log.h  trace_slog.c
cfg/: MANIFEST  cfg.py  cfg.rb  pass1.py  pass1.rb  pass2.py  pass2.rb
cfg/doc/: cfg_user.txt
cmake/: presets-base.json  toolchain-a35.cmake  toolchain-arm-none-eabi.cmake  toolchain-riscv64.cmake
doc/: asp_spec.txt  configurator.txt  design.txt  extension.txt  inherit_design.txt  mutex_design.txt  non_tecs.txt  porting.txt  simtimer.txt  user.txt  version.txt
docs/: FILE_PLAN.md  OVERVIEW.md  asp3_derivative_plan.md  building.md  errors.md
docs/api/: ATT_INI.md  ATT_ISR.md  ATT_TER.md  CFG_INT.md  CRE_ALM.md  CRE_CYC.md  CRE_DTQ.md  CRE_FLG.md  CRE_ISR.md  CRE_MPF.md  CRE_MTX.md  CRE_PDQ.md  CRE_SEM.md  CRE_TSK.md  DEF_EXC.md  DEF_ICS.md  DEF_INH.md  DEF_SVC.md  README.md  act_tsk.md  adj_tim.md  can_act.md  can_wup.md  chg_ipm.md  chg_pri.md  clr_flg.md  clr_int.md  dis_dsp.md  dis_int.md  dis_ter.md  dly_tsk.md  ena_dsp.md  ena_int.md  ena_ter.md  ext_ker.md  ext_tsk.md  fch_hrt.md  fsnd_dtq.md  get_inf.md  get_ipm.md  (+74 more)
docs/dev/: README.md  cfg-python.md  cfg-spec-map.md  ci.md  cli-target.md  cmake.md  devcontainer.md  docs-markdown.md  file-cleanup.md  fsp-integration.md  issue-cpuexc-armm.md  memory-protection.md  mps2-an386.md  mps2-an505.md  mps3-an547.md  nxp-integration.md  os-awareness.md  pico-sdk-integration.md  pico2-riscv.md  porting-test.md  qemu-target-a64.md  qemu-target-riscv.md  rb-tools-python.md  safeg.md  skill-package.md  stm32-integration.md  tecs-less.md  ttsp3-conformance.md  upstream-report-tracelog.md
docs/porting/: IMPL_INDEX.md  PORTING_GUIDE.md  target_spec.yaml.template
docs/spec/: 01_overview.md  02_target_overview.md  03_quickstart.md  04_directory_structure.md  05_configuration_script.md  06_makefile.md  07_configurator.md  08_system_services.md  09_support_libraries.md  10_test_program.md  11_usage_notes.md  12_reference.md  13_reference_detail.md  README.md  asp3_spec_overview.md  configurator_spec.md  design_inherit.md  design_mutex.md  design_overview.md  extension_guide.md  migration_guide.md  non_tecs_services.md  porting_01_common.md  porting_02_kernel_impl.md  porting_03_cfg_syssvc.md
extension/: MANIFEST
include/: kernel.h
kernel/: alarm.py  cyclic.c  cyclic.py  dataqueue.py  eventflag.py  exception.py  genoffset.py  interrupt.py  interrupt.trb  kernel.py  kernel.trb  kernel_check.py  kernel_check.trb  kernel_sym.def  mempfix.py  mutex.py  pridataq.py  semaphore.py  sys_manage.c  task.py  time_event.c  time_event.h
sample/: Makefile
scripts/: check_events.py  check_spec_conversion.py  parse_slog.py
scripts/ci/: run_board_mimxrt685evk.sh  run_board_pico2.sh  run_testcfg.sh  run_testexec.py  smoke_sample1.sh
scripts/gdb_os_aware/: README.md  os_awareness.py
syssvc/: banner.c  serial.h  tBannerMain.c  tLogTaskMain.c  test_svc.c  test_svc.h
test/: MANIFEST  simt_simtimer1.c  simt_simtimer1.cfg  simt_systim1.c  simt_systim1_64hrt.c  simt_systim2.c  simt_systim2.cfg  simt_systim2_64hrt.c  simt_systim3.c  simt_systim3.cfg  simt_systim3_64hrt.c  simt_systim4.c  simt_systim4.cfg  tBitKernel.c  test_common.h  test_mvevpr.c  test_mvevpr.cfg  test_mvevpr.h  testexec.py  testexec.rb
test/porting/: README.md  tap.c  tap.h  test_porting.c  test_porting.cfg  test_porting_cfg.h
test/ttsp/: README.md  run_ttsp.py
test_cfg/: cfg_common.h  pass1_cfg1.cfg  pass2_cfg1.cfg  testcfg.py  testcfg.rb
test_cfg/cfg_all1/: kernel_cfg.c
test_cfg/pass1_cfg1/: error.txt
test_cfg/pass2_cfg1/: error.txt
utils/: applyrename.py  genrename.py  gentest.py  gentest.rb  makerelease.py  makerelease.rb
(+184 files in other folders)
